# omc-hub-rs

./: .deepsource.toml  Cargo.toml  DEVELOPMENT.md  README.md
.github/: omc-tracked.json
.github/workflows/: ci.yml  omc-sync.yml  release.yml
.omc/state/: agent-replay-b6d4211c-768b-4f3f-8950-b504d3c75873.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
scripts/: omc-compat-check.py  omc-compat-check.sh
src/: child.rs  config.rs  hub.rs  main.rs  omc_tools.rs  protocol.rs  toolbox.rs
tests/: mcp_compliance.rs
