[package]
name = "omc-hub"
version = "0.1.0"
edition = "2024"
description = "Lightweight MCP hub — replaces OMC's 663MB bun+haiku stack with <5MB Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
glob-match = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mimalloc = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
